--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,18 +4,42 @@ version = "0.1.0"
 description = "tool to change embedded subtitles"
 authors = ["MadMcCrow <do-not-mail.me@please.com>"]
 packages = [
-        {include = "cli",     from = "src"},
-        {include = "private", from = "src"}
+        {include = "gui",    from = "src"},
+        {include = "ffmpeg", from = "src"},
+        {include = "src"},
     ]
-readme = "README.md"
+readme = "docs/README.md"
+license-files = ["docs/LICENSE.md"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+PySide6 = "^6.0.0"
 
 [tool.poetry.scripts]
-pysubfixer-cli = 'cli:main'
-pysubfixer-gui = 'gui:main'
+pysubfixer-cli = 'src.main:cli'
+pysubfixer-gui = 'src.main:gui'
 
 [build-system]
 requires = ["poetry-core>=1.9.1,<3.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry-pyinstaller-plugin]
+#version = "6.7.0"
+#disable-upx = true
+
+# Include metadata from selected packages (including dependencies)
+recursive-copy-metadata = [
+    "requests"
+]
+
+# Include metadata from selected packages
+copy-metadata = [
+    "boto3"
+]
+
+[tool.poetry-pyinstaller-plugin.scripts]
+pysubfixer = "src/main.py"
+
+[tool.poetry-pyinstaller-plugin.collect]
+# Collect all submodules, data files & binaries for 'package_A' and 'package_B'
+all = ['package_A', 'package_B']
