--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ license-files = ["docs/LICENSE.md"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pycall = "^0.1"
 PySide6 = "^6.0.0"
 
 [tool.poetry.scripts]
